--- a/Notebooks/cleaning_beer_advocate_ds.ipynb
+++ b/Notebooks/cleaning_beer_advocate_ds.ipynb
@@ -255,6 +255,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "740adc1d",
+   "metadata": {},
+   "source": [
+    "Spliting the DF into three. It is too big for Github"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "1fd2a210",
