Updated notebooks, visuals, ERD, ERM and DF.

--- a/Notebooks/beer_dataset_scrapping.ipynb
+++ b/Notebooks/beer_dataset_scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "1eadda6e",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "3388a965",
    "metadata": {},
    "outputs": [
@@ -306,80 +306,8 @@
          "type": "integer"
         }
        ],
-       "ref": "b8bb257a-5901-4498-8653-d98746cfeb5c",
+       "ref": "f3c3c2fd-0d4d-447d-9175-f67a3031838e",
        "rows": [
-        [
-         "0",
-         "Amber Ale",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "1"
-        ],
-        [
-         "1",
-         "American Amber Lager",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "2"
-        ],
-        [
-         "2",
-         "American Barley Wine",
-         "Light brown",
-         "High",
-         "Strong",
-         "3"
-        ],
-        [
-         "3",
-         "American Black Ale",
-         "Dark",
-         "High",
-         "Regular",
-         "4"
-        ],
-        [
-         "5",
-         "American Brown Ale",
-         "Light dark",
-         "Moderate",
-         "Light",
-         "5"
-        ],
-        [
-         "6",
-         "American Cream Ale",
-         "Gold",
-         "Low",
-         "Light",
-         "6"
-        ],
-        [
-         "7",
-         "American Imperial Porter",
-         "Dark",
-         "Moderate",
-         "Strong",
-         "7"
-        ],
-        [
-         "8",
-         "American Imperial Red Ale",
-         "Light brown",
-         "High",
-         "Regular",
-         "8"
-        ],
-        [
-         "9",
-         "American Imperial Stout",
-         "Dark",
-         "High",
-         "Strong",
-         "9"
-        ],
         [
          "10",
          "american india pale ale",
@@ -387,331 +315,11 @@
          "High",
          "Regular",
          "10"
-        ],
-        [
-         "11",
-         "American Lager",
-         "Gold",
-         "Low",
-         "Light",
-         "11"
-        ],
-        [
-         "12",
-         "American Pale Ale",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "12"
-        ],
-        [
-         "14",
-         "American Stout",
-         "Dark",
-         "Moderate",
-         "Strong",
-         "13"
-        ],
-        [
-         "15",
-         "American Style Wheat Wine Ale",
-         "Gold",
-         "High",
-         "Strong",
-         "14"
-        ],
-        [
-         "16",
-         "American Wheat",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "15"
-        ],
-        [
-         "17",
-         "Baltic Style Porter",
-         "Dark",
-         "Moderate",
-         "Strong",
-         "16"
-        ],
-        [
-         "19",
-         "Belgian Style Blonde Ale",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "17"
-        ],
-        [
-         "20",
-         "Belgian Style Dubbel",
-         "Light dark",
-         "Moderate",
-         "Regular",
-         "18"
-        ],
-        [
-         "21",
-         "Belgian Style Flanders",
-         "Light brown",
-         "Low",
-         "Strong",
-         "19"
-        ],
-        [
-         "23",
-         "Belgian Style Golden Strong Ale",
-         "Gold",
-         "Moderate",
-         "Strong",
-         "20"
-        ],
-        [
-         "24",
-         "belgian style lambic gueuze",
-         "Gold",
-         "Low",
-         "Light",
-         "21"
-        ],
-        [
-         "25",
-         "Belgian Style Pale Ale",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "22"
-        ],
-        [
-         "26",
-         "Belgian Style Quadrupel",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "23"
-        ],
-        [
-         "27",
-         "Belgian Style Saison",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "24"
-        ],
-        [
-         "28",
-         "Belgian Style Tripel",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "25"
-        ],
-        [
-         "29",
-         "belgian style wit",
-         "Gold",
-         "Low",
-         "Regular",
-         "26"
-        ],
-        [
-         "30",
-         "Berliner Style Weisse",
-         "Gold",
-         "Low",
-         "Regular",
-         "27"
-        ],
-        [
-         "31",
-         "Blonde Ale",
-         "Gold",
-         "Moderate",
-         "Light",
-         "28"
-        ],
-        [
-         "32",
-         "Bohemian Style Pilsener",
-         "Gold",
-         "Moderate",
-         "Light",
-         "29"
-        ],
-        [
-         "33",
-         "British Style Barley Wine Ale",
-         "Light brown",
-         "Moderate",
-         "Strong",
-         "30"
-        ],
-        [
-         "34",
-         "California Common",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "31"
-        ],
-        [
-         "35",
-         "Chocolate Beer",
-         "Dark",
-         "Moderate",
-         "Strong",
-         "32"
-        ],
-        [
-         "36",
-         "Coffee Beer",
-         "Light dark",
-         "Moderate",
-         "Strong",
-         "33"
-        ],
-        [
-         "37",
-         "Contemporary Gose",
-         "Gold",
-         "Low",
-         "Regular",
-         "34"
-        ],
-        [
-         "38",
-         "English Style Bitter",
-         "Gold",
-         "Moderate",
-         "Light",
-         "35"
-        ],
-        [
-         "39",
-         "English Style Brown Ale",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "36"
-        ],
-        [
-         "40",
-         "English Style Brown Porter",
-         "Light dark",
-         "Moderate",
-         "Regular",
-         "37"
-        ],
-        [
-         "41",
-         "english style india pale ale",
-         "Gold",
-         "Moderate",
-         "Regular",
-         "38"
-        ],
-        [
-         "42",
-         "english style dark mild",
-         "Light dark",
-         "Low",
-         "Light",
-         "39"
-        ],
-        [
-         "43",
-         "English Style Oatmeal Stout",
-         "Dark",
-         "Moderate",
-         "Strong",
-         "40"
-        ],
-        [
-         "44",
-         "English Style Old Ale",
-         "Light dark",
-         "Moderate",
-         "Regular",
-         "41"
-        ],
-        [
-         "45",
-         "English Style Pale Ale (ESB)",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "42"
-        ],
-        [
-         "46",
-         "English Style Sweet Stout (Milk Stout)",
-         "Dark",
-         "Moderate",
-         "Regular",
-         "43"
-        ],
-        [
-         "47",
-         "European Style Export",
-         "Gold",
-         "Moderate",
-         "Light",
-         "44"
-        ],
-        [
-         "48",
-         "biere de garde",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "45"
-        ],
-        [
-         "49",
-         "fruit field or flavored",
-         "Light dark",
-         "Moderate",
-         "Strong",
-         "46"
-        ],
-        [
-         "50",
-         "german style brownaltbier",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "47"
-        ],
-        [
-         "51",
-         "German Style Bock",
-         "Light dark",
-         "Moderate",
-         "Regular",
-         "48"
-        ],
-        [
-         "52",
-         "German Style Doppelbock",
-         "Light dark",
-         "Moderate",
-         "Regular",
-         "49"
-        ],
-        [
-         "53",
-         "German Style Dunkel",
-         "Light brown",
-         "Moderate",
-         "Regular",
-         "50"
         ]
        ],
        "shape": {
         "columns": 5,
-        "rows": 72
+        "rows": 1
        }
       },
       "text/html": [
@@ -742,132 +350,100 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Amber Ale</td>\n",
-       "      <td>Light brown</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>American Amber Lager</td>\n",
+       "      <th>10</th>\n",
+       "      <td>american india pale ale</td>\n",
        "      <td>Gold</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>American Barley Wine</td>\n",
-       "      <td>Light brown</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Strong</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>American Black Ale</td>\n",
-       "      <td>Dark</td>\n",
        "      <td>High</td>\n",
        "      <td>Regular</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>American Brown Ale</td>\n",
-       "      <td>Light dark</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>Scottish Style Ale</td>\n",
-       "      <td>Light brown</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>Session Beer</td>\n",
-       "      <td>Dark</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>Smoke Porter</td>\n",
-       "      <td>Light brown</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>Vienna Style Lager</td>\n",
-       "      <td>Light brown</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>german style marzen oktoberfest</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>72</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>72 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         beer_style        color bitterness  alcohol  style_id\n",
-       "0                         Amber Ale  Light brown   Moderate  Regular         1\n",
-       "1              American Amber Lager         Gold   Moderate  Regular         2\n",
-       "2              American Barley Wine  Light brown       High   Strong         3\n",
-       "3                American Black Ale         Dark       High  Regular         4\n",
-       "5                American Brown Ale   Light dark   Moderate    Light         5\n",
-       "..                              ...          ...        ...      ...       ...\n",
-       "73               Scottish Style Ale  Light brown        Low  Regular        68\n",
-       "74                     Session Beer         Dark   Moderate  Regular        69\n",
-       "76                     Smoke Porter  Light brown   Moderate  Regular        70\n",
-       "78               Vienna Style Lager  Light brown   Moderate  Regular        71\n",
-       "79  german style marzen oktoberfest         Gold   Moderate    Light        72\n",
-       "\n",
-       "[72 rows x 5 columns]"
+       "                 beer_style color bitterness  alcohol  style_id\n",
+       "10  american india pale ale  Gold       High  Regular        10"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "dcd67b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_beers_data.to_csv('../Data/Clean/standard_beer_types_features_clean.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65745bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('../Data/Clean/standard_beer_types_features_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d2bf66b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Amber Ale', 'American Amber Lager', 'American Barley Wine',\n",
+       "       'American Black Ale', 'American Brown Ale', 'American Cream Ale',\n",
+       "       'American Imperial Porter', 'American Imperial Red Ale',\n",
+       "       'American Imperial Stout', 'american india pale ale',\n",
+       "       'American Lager', 'American Pale Ale', 'American Stout',\n",
+       "       'American Style Wheat Wine Ale', 'American Wheat',\n",
+       "       'Baltic Style Porter', 'Belgian Style Blonde Ale',\n",
+       "       'Belgian Style Dubbel', 'Belgian Style Flanders',\n",
+       "       'Belgian Style Golden Strong Ale', 'belgian style lambic gueuze',\n",
+       "       'Belgian Style Pale Ale', 'Belgian Style Quadrupel',\n",
+       "       'Belgian Style Saison', 'Belgian Style Tripel',\n",
+       "       'belgian style wit', 'Berliner Style Weisse', 'Blonde Ale',\n",
+       "       'Bohemian Style Pilsener', 'British Style Barley Wine Ale',\n",
+       "       'California Common', 'Chocolate Beer', 'Coffee Beer',\n",
+       "       'Contemporary Gose', 'English Style Bitter',\n",
+       "       'English Style Brown Ale', 'English Style Brown Porter',\n",
+       "       'english style india pale ale', 'english style dark mild',\n",
+       "       'English Style Oatmeal Stout', 'English Style Old Ale',\n",
+       "       'English Style Pale Ale (ESB)',\n",
+       "       'English Style Sweet Stout (Milk Stout)', 'European Style Export',\n",
+       "       'biere de garde', 'fruit field or flavored',\n",
+       "       'german style brownaltbier', 'German Style Bock',\n",
+       "       'German Style Doppelbock', 'German Style Dunkel',\n",
+       "       'German Style Dunkelweizen', 'German Style Hefeweizen',\n",
+       "       'German Style Helles', 'German Style Kolsch',\n",
+       "       'german style heller bock maibock', 'German Style Pilsener',\n",
+       "       'German Style Schwarzbier', 'German Style Weizenbock',\n",
+       "       'Herb and Spice Beer', 'Honey Beer', 'Imperial India Pale Ale',\n",
+       "       'Irish Style Dry Stout', 'irish style red', 'New England IPA',\n",
+       "       'Pumpkin Beer', 'Robust Porter', 'scotch ale wee heavy',\n",
+       "       'Scottish Style Ale', 'Session Beer', 'Smoke Porter',\n",
+       "       'Vienna Style Lager', 'german style marzen oktoberfest'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_beers_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcd67b8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_beers_data.to_csv('../Data/Clean/standard_beer_types_features_clean.csv',index=False)"
+    "df['beer_style'].unique()"
    ]
   }
  ],
